src/objects/Strike_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Admin_Emails__c</fullName>
        <label>Admin Emails</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Approver__c</fullName>
        <description>Store Id of default approver</description>
        <label>Default Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Approver__c</fullName>
        <label>Second Approver</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Strike Settings</label>
</CustomObject>